Fixed the missing background issue.

--- a/hexo-triangles/source/css/style.css
+++ b/hexo-triangles/source/css/style.css
@@ -1,6 +1,6 @@
 
 body {
-  background: url(../img/triangleSVG.svg);
+  background: url(images/triangleSVG.svg);
   background-attachment: fixed;
   background-repeat: no-repeat;
   background-size: cover;
